# clawhub-customer-hunter

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  SESSION_HISTORY.md  context.txt  package-lock.json  package.json
clients/ranv-pitchkit/: CLAUDE.md  Cargo.toml  READ-ME-FIRST.md  README.md  SITE-AUDIT.md  generate.bat
clients/ranv-pitchkit/audiences/: dealer.toml  film.toml  le.toml  outfitter.toml  rancher.toml  training.toml
clients/ranv-pitchkit/examples/: example-prospect.toml
clients/ranv-pitchkit/src/: audiences.rs  main.rs  proposal.rs
config/: clients.json  env.example  sender.json
proposals/: AJ_Auto_Repair_Digital_Growth_Proposal.docx  Apex_HVAC_Digital_Growth_Proposal.docx  Axner_Excavating__Inc__Digital_Growth_Proposal.docx  Barrows_Landscaping_Digital_Growth_Proposal.docx  Bidwell_Iron_Company_Digital_Growth_Proposal.docx  Boster_Roofing_Digital_Growth_Proposal.docx  Campbell_Fence_Digital_Growth_Proposal.docx  Chico_Electric_Digital_Growth_Proposal.docx  Chico_Plumbing_Digital_Growth_Proposal.docx  Chico_Septic_Digital_Growth_Proposal.docx  Clear_Choice_Pool_Service_Digital_Growth_Proposal.docx  Crossfire_Tree___Vegetation_Services_Digital_Growth_Proposal.docx  Custom_Plumbing_Pros_Digital_Growth_Proposal.docx  Dave_Brown_s_Pest_Control_Digital_Growth_Proposal.docx  Distinctive_Landscape___Maintenance_Digital_Growth_Proposal.docx  Double_Diamond_Steel_Digital_Growth_Proposal.docx  Earl_s_Performance_Plumbing_Digital_Growth_Proposal.docx  Feather_River_Aire_Digital_Growth_Proposal.docx  First_Choice_Plastics_Digital_Growth_Proposal.docx  (+93 more)
(+11 files in other folders)
