[package]
name = "ranv-pitch"
version = "0.1.0"
edition = "2021"
description = "Rocking-A Night Vision proposal generator — baseline Rust pipeline, Claude-augmentable"
authors = ["Smoothy / Rocking-A Night Vision"]

[[bin]]
name = "ranv-pitch"
path = "src/main.rs"

[dependencies]
docx-rs = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = "0.4"
